Ticket #14598 (closed defect: fixed)

Opened 10 months ago

Last modified 5 months ago

wxHTTP doesn't block when sending big POST data

Reported by: Platonides Owned by:
Priority: normal Milestone:
Component: wxGTK Version:
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

I am POSTing files from a secondary thread and noticed that it didn't send the full data.
wxWidgets tried to post the full file, the send() syscall only partially accepted it and wxWidgets never passing them again. The webserver keeps waiting (due to the Content-Length being right) and finally the connection timeouts.

Simply adding wxSOCKET_WAITALL flag to the socket fixed it (src/common/http.c:391).

Attachments

wxWidgets-wxHttp.patch download (0.6 KB) - added by Platonides 10 months ago.
wxHTTP patch

Change History

Changed 10 months ago by Platonides

wxHTTP patch

Changed 10 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72409]) Use wxSOCKET_WAITALL in wxHTTP to ensure that all data is sent.

POST-ing sufficiently big amounts of data in wxHTTP didn't work because it
couldn't be sent all at once to the server. Use wxSOCKET_WAITALL to ensure
that we do send all of the data.

Closes #14598.

Changed 5 months ago by VZ

(In [73391]) Set margins on creation correctly for wxTE_RICH[2] wxTextCtrl in wxMSW.

In spite of the MSDN documentation, EC_USEFONTINFO can't be used in lParam
with rich edit controls, so pass it in wParam for them.

Closes #14598.

Changed 5 months ago by vadz

Sorry, disregard last comment, wrong ticket number (was supposed to be #14958).

Note: See TracTickets for help on using tickets.